Modified stuff to move bower components into www

--- a/www/index.html
+++ b/www/index.html
@@ -10,13 +10,13 @@
 
     <!-- Le javascript -->
 
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../bower_components/angular/angular.min.js"></script>
-    <script src="../bower_components/angular-route/angular-route.min.js"></script>
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./bower_components/angular/angular.min.js"></script>
+    <script src="./bower_components/angular-route/angular-route.min.js"></script>
 
     <!-- Le styles -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="./bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/app.css">
     <script src="./js/app.js" type="text/javascript" charset="utf-8"></script>
     <script src="./js/controllers.js" type="text/javascript" charset="utf-8"></script>
